crates/glyph-cli/tests/corpus/invalid/return_of_no_value_call_block.glyph
block void_helper()
    description: "Void helper that records progress."
    flow:
        "Record a progress note."

block caller() -> Marker
    flow:
        return void_helper()

skill orchestrate()
    description: "Orchestrate the caller."
    flow:
        caller()
